Registration and result update (#82)
* add swagger to result endpoint

* add swagger to result endpoint

* add error message in div and modify handleSubmit to route to login on submit, correct setErrorMessage

* modify server port on swagger section
